# solace

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile.build  Dockerfile.run  README.md  docker_build.bat  install.bat  install.sh  install32.bat  solace_build.bat  solace_run.bat  travis_setup.sh
docs/: README.md  build.md  example.md  install.md  reference.md  solacerest.md
examples/: README.md  sol_capabilities.q  sol_endpoint_create.q  sol_endpoint_destroy.q  sol_init.q  sol_pub_direct.q  sol_pub_directrequestor.q  sol_pub_persist.q  sol_sub_direct.q  sol_sub_directreplier.q  sol_sub_persist.q  sol_topic_to_queue_mapping.q  sol_version.q  solace.q
include/: kdbsolace.h
q/: solace.q
script/: solace.q
source/: CMakeLists.txt  KdbSolaceEvent.h  deltasolace.c  deltasolace.h  kdbsolace.cpp  kdbsolace.h
source/api/include/solclient/: solCache.h  solClient.h  solClientDeprecated.h  solClientMsg.h
source/api/lib/: LICENSES  libsolclient.so.1  libsolclient.so.1.7.2.1.75
source/log/: ThreadID.h
src/: kdbsolace.cpp  kdbsolace.h  socketpair.c
src/log/: ThreadID.h
tests/: connect.q  runTests.sh  solace.q  sub.q  test.q
win32/: kdbsolace.def
